[package]
name = "bohwon-web"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "bohwon-web"

[dependencies]
bignumber = "0.1.1"
chrono = { version = "0.4.35", features = ["serde"] }
console_error_panic_hook = "0.1.7"
derive_more = "0.99.17"
futures = "0.3.30"
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }
js-sys = "0.3.69"
leptos = { version = "0.6.9", features = ["csr", "nightly"] }
leptos-use = "0.10.4"
leptos_meta = { version = "0.6.9", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.9", features = ["csr", "nightly"] }
regex = "1.10.3"
reqwest = { version = "0.11.25", features = ["json", "multipart"] }
serde = { version = "1.0.195", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Blob", "FileReader"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
